<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.ac.igdtuw.mindtheapp.ScheduleFragment">


    <Button
        android:id="@+id/btnPieChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Pie Chart"/>

    <android.support.v7.widget.CardView
        android:id="@+id/CardViewSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recViewSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/tvMedLeft"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/medicines_left"/>

        <TextView
            android:id="@+id/tvOutOf"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/out_of"/>

        <TextView
            android:id="@+id/tvTotalMed"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/medicines_per_day"/>
    </LinearLayout>

</LinearLayout>
